Fixed layout issues, added images

--- a/src/Assignment_7_Mario/MarioPlayerStyles.css
+++ b/src/Assignment_7_Mario/MarioPlayerStyles.css
@@ -1,25 +1,13 @@
 ﻿body {
     margin: 0px;
     padding: 0px;
-}
-
-
-#footer {
-    height: 50px;
-    width: 100%;
-    bottom: 0px;
-    left: 0px;
-    background-color: black;
-    color: white;
-    border-top: 1px;
-    border-top-color: white;
-    text-align: center;
+    overflow-x: hidden;
 }
 
 
 .site-wrapper {
-    height: auto;
     width: auto;
+    height: auto;
 }
 
 
@@ -28,9 +16,9 @@
     top: 0px;
     height: 50px;
     width: 100%;
-    background-color: darkcyan;
+    background-color: rgba(25, 37, 57, 0.8);
     color: white;
-    box-shadow: 0px -34px 12px 35px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px -34px 12px 35px rgba(0, 0, 0, 0.8);
 }
 
 
@@ -42,32 +30,56 @@
     text-align: center;
 }
 
-/*
+
 #main-body {
     width: 100%;
-    height: 1000px;
-    background-color: darkgray;
-    min-height: 100%;
-    min-width: 100%;
-    z-index: 2;
-    top: 0px;
-    align-content: center;
-}
-
-
-#level-display {
-    height: 800px;
-    width: 75%;
-    background-color: white;
     z-index: 3;
-    box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.4);
-    align-self: center;
-    vertical-align: middle;
 }
 
 
 #game-background {
     height: 800px;
-    width: 600px;
+    width: auto;
 }
-*/
+
+
+#mario {
+    position: absolute;
+    bottom: 100px;
+    z-index: 10;
+    height: 120px;
+    width: 120px;
+    z-index: 14;
+}
+
+
+#mario-image {
+    height: 120px;
+    width: 120px;
+    z-index: 15;
+}
+
+
+#bottom-bricks {
+    height: 100px;
+    background-image: url(http://t2.rbxcdn.com/47357bda245268d1ca10d687043efe8e);
+    z-index: 12;
+    position: relative;
+    bottom: 0px;
+}
+
+
+#start-button {
+    top: 14px;
+    left: 25px;
+    z-index: 25;
+    position: fixed;
+}
+
+#walk {
+    top: 14px;
+    left: 125px;
+    z-index: 25;
+    position: fixed;
+}
+
